[metadata]
name =
description =
author =
license =
license_file = LICENSE
platforms = osx, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    sim_components
    configuration
install_requires =
    numpy >= 1.21.0
    matplotlib >= 3.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
