[metadata]
name = redwood-violet
description = Modular behavioral simulations library
author = Jonathan Wright (@Meridian-Onset)
license = MIT
license_file = LICENSE
platforms = osx, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    sim_components
install_requires =
    numpy >= 1.21.0
    matplotlib >= 3.4
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 3.9
    tox >= 3.24

[options.package_data]
sim_components = py.typed

[flake8]
max-line-length = 160
exclude =
    scratchpad,
    __pycache__,
    UNKNOWN.egg-info
